--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -80,9 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Import necessary libraries and define the model\n",
     "import amici\n",
@@ -158,13 +156,13 @@
     "temp_dir = Path(tempfile.mkdtemp())\n",
     "model_output_dir = temp_dir / model_name\n",
     "model_reduced_output_dir = temp_dir / model_reduced_name"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Import the model\n",
     "sbml_importer = amici.SbmlImporter(antimony2sbml(ant_model), from_file=False)\n",
@@ -198,13 +196,13 @@
     "    constant_parameters=constant_parameters,\n",
     "    sigmas=sigmas,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# import the models and run some test simulations\n",
     "model_reduced_module = import_model_module(\n",
@@ -234,20 +232,22 @@
     "plot_state_trajectories(rdata_reduced, model=model_reduced, ax=axes[0, 1])\n",
     "plot_observable_trajectories(rdata_reduced, model=model_reduced, ax=axes[1, 1])\n",
     "fig.tight_layout()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# the enzyme state was removed from the ODEs of the reduced model\n",
     "print(model.getStateIdsSolver())\n",
     "print(model_reduced.getStateIdsSolver())\n",
     "print(model.getStateIds())\n",
     "print(model_reduced.getStateIds())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -291,11 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "# Call post-equilibration by setting an infinity timepoint\n",
     "model.setTimepoints([np.inf])\n",
@@ -324,13 +322,15 @@
     "    \"posteq_cpu_timeB\",\n",
     "]:\n",
     "    print(f\"{key:>16}: {rdata[key]}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 'x' value contains state values corresponding to the time points that were set for the model simulation. In this case, it is the state values at $t=\\infty$, i.e. the steady state. One can also see that `xdot` values are equal to zero or very small, which means that the steady-state condition ($\\dot{x} = 0$) is fulfilled. The actual weighted root-mean-square of the right-hand side when steady state was reached is reported in `posteq_wrms`.\n",
+    "The `x` value contains state values corresponding to the time points that were set for the model simulation. In this case, it is the state values at $t=\\infty$, i.e., the steady state. One can also see that `xdot` values are equal to zero or very small, which means that the steady-state condition ($\\dot{x} \\approx 0$) is fulfilled. The actual weighted root-mean-square of the right-hand side when steady state was reached is reported in `posteq_wrms`.\n",
     "\n",
     "The fields `posteq_status` and `posteq_numsteps` in `rdata` tell us how post-equilibration worked. In both arrays each entry is, respectively, the status or the number of steps taken for\n",
     "\n",
@@ -348,6 +348,20 @@
     "  * `-4`: Error: The damping factor in Newton's method was reduced until it met the lower bound without success (Newton's method only)\n",
     "  * `-5`: Error: The model was simulated past the timepoint `t=1e100` without finding a steady state. Therefore, it is likely that the model has no steady state for the given parameter vector.\n",
     "\n",
+    "  Don't check the integer values directly, but use the `SteadyStateStatus` enum instead, which is more readable and stable:\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "list(SteadyStateStatus)",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "In our case, only the second entry of `posteq_status` contains a positive integer:\n",
     "The first run of Newton's method failed due to a Jacobian, which could not be factorized, but the second run (simulation) contains the entry `1` (success).\n",
     "The third entry is `0`, thus Newton's method was not launched for the second time.\n",
@@ -360,9 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# steady state value found by pre-equilibration\n",
     "steady_state = rdata[\"x\"][0]\n",
@@ -374,7 +386,9 @@
     "\n",
     "for stst_value in steady_state:\n",
     "    plt.axhline(y=stst_value, color=\"gray\", linestyle=\"--\", linewidth=1)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -385,9 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# reduce maxsteps for integration\n",
     "model.setTimepoints([np.inf])\n",
@@ -399,7 +411,9 @@
     "print(\n",
     "    \"Number of steps employed in post-equilibration:\", rdata[\"posteq_numsteps\"]\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -411,11 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "model_reduced.setTimepoints([np.inf])\n",
     "model_reduced.setSteadyStateComputationMode(\n",
@@ -439,7 +451,9 @@
     "    \"Number of steps employed in post-equilibration:\",\n",
     "    rdata_reduced[\"posteq_numsteps\"],\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -452,9 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# create edata, with 3 timepoints and 2 observables:\n",
     "edata = ExpData(2, 0, 0, np.array([0.0, 0.1, 1.0]))\n",
@@ -463,15 +475,15 @@
     "# set parameters for pre-equilibration\n",
     "edata.fixedParametersPreequilibration = np.array([0.0, 2.0])\n",
     "edata.reinitializeFixedParameterInitialStates = True"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "# create the solver object and run the simulation\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -493,7 +505,9 @@
     "\n",
     "plot_state_trajectories(rdata_reduced, model=model_reduced)\n",
     "plot_observable_trajectories(rdata_reduced, model=model_reduced)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -507,9 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Change the last timepoint to an infinity timepoint.\n",
     "edata.setTimepoints(np.array([0.0, 0.1, float(\"inf\")]))\n",
@@ -517,7 +529,9 @@
     "# run the simulation\n",
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced, edata)\n",
     "assert rdata_reduced.status == AMICI_SUCCESS"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -561,25 +575,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "We want to demonstrate both possibilities for steady-state sensitivities computation, and the failure of their computation if the Jacobian is singular and the `newtonOnly` setting was used."
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# todo: better summary of SteadyStateSensitivityModes\n",
-    "# todo: integrationOnly"
+    "We want to demonstrate both possibilities for steady-state sensitivities computation, and the failure of their computation if the Jacobian is singular and the `newtonOnly` setting was used.\n",
+    "\n",
+    "<!-- todo: better summary of SteadyStateSensitivityModes; integrationOnly -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "# Call simulation with singular Jacobian and `integrateIfNewtonFails` mode\n",
     "model.setTimepoints([np.inf])\n",
@@ -601,7 +607,9 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata[\"sx\"][0, :, :])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -613,9 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Call simulation with singular Jacobian and newtonOnly mode (will fail)\n",
     "model.setTimepoints([np.inf])\n",
@@ -636,7 +642,9 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata[\"sx\"][0, :, :])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -649,11 +657,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "# Try `newtonOnly` option with reduced model\n",
     "model_reduced.setTimepoints([np.inf])\n",
@@ -685,7 +691,9 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata_reduced[\"sx\"][0, :, :])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -752,23 +760,14 @@
     "![Adjoint steady-state sensitivity computation modes in AMICI](figures/amici_logic_adjoint_sensitivities_at_stst.svg)\n",
     "\n",
     "**_NOTE:_** adjoint sensitivity analysis yields less information than forward sensitivity analysis,\n",
-    "since state sensitivities are not computed. However, it has a better scaling behavior towards large model size."
+    "since state sensitivities are not computed. However, it has a better scaling behavior towards large model size.\n",
+    "\n",
+    "<!-- todo: standard ASA first -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# todo: standard ASA first"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Call post-equilibration and sensitivities computation using adjoint sensitivity analysis\n",
     "# by setting an infinity timepoint\n",
@@ -801,7 +800,9 @@
     "    rdata_reduced[\"posteq_numstepsB\"],\n",
     ")\n",
     "print(\"Computed gradient:\", rdata_reduced[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -813,9 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Call adjoint post-equilibration with model with singular Jacobian\n",
     "model.setSteadyStateSensitivityMode(SteadyStateSensitivityMode.newtonOnly)\n",
@@ -836,7 +835,9 @@
     "    rdata[\"posteq_numstepsB\"],\n",
     ")\n",
     "print(\"Computed gradient:\", rdata[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -857,11 +858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "# No post-equilibration this time.\n",
     "# create edata, with 3 timepoints and 2 observables:\n",
@@ -884,15 +883,15 @@
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
     "# Singular Jacobian, use simulation\n",
     "model.setSteadyStateSensitivityMode(\n",
@@ -913,13 +912,13 @@
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -931,7 +930,9 @@
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -959,9 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver and adjoints with initial state sensitivities\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -980,13 +979,13 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use simulation solver and adjoints with initial state sensitivities\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -1007,13 +1006,13 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver and adjoints with fully adjoint pre-equilibration\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -1034,7 +1033,9 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1043,9 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Singular Jacobian, use try Newton solver and adjoints with fully adjoint pre-equilibration\n",
     "solver = model.getSolver()\n",
@@ -1066,7 +1065,9 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata[\"sllh\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -1088,13 +1089,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use simulation\n",
     "model_reduced.setSteadyStateSensitivityMode(\n",
@@ -1131,7 +1130,9 @@
     "print(\"\\nCPU time to reach steady state (ms):\")\n",
     "print(\"  lax tolerances:   \", rdata_reduced_lax[\"preeq_cpu_time\"])\n",
     "print(\"  strict tolerances:\", rdata_reduced_strict[\"preeq_cpu_time\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
