--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1574,14 +1574,36 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Elsevier BV},
 }
 
-@PhdThesis{Ernst2024,
-  author           = {Ernst, Ariane},
-  title            = {Mathematical Modeling and Analysis of Neurotransmission},
-  year             = {2024},
-  type             = {Dissertation},
-  creationdate     = {2025-06-16T12:42:10},
-  modificationdate = {2025-06-16T12:42:10},
-  url              = {http://dx.doi.org/10.17169/refubium-47210},
+@Article{ErnstBan2025,
+  author           = {Ernst, Ariane and Bankowski, Anastasia and Jusyte, Meida and Okunola, Toluwani and Petrov, Tino and Walter, Alexander M. and Winkelmann, Stefanie},
+  journal          = {Bulletin of Mathematical Biology},
+  title            = {Parameter Optimization for a Neurotransmission Recovery Model},
+  year             = {2025},
+  issn             = {1522-9602},
+  month            = jul,
+  number           = {8},
+  volume           = {87},
+  creationdate     = {2025-07-14T06:34:49},
+  doi              = {10.1007/s11538-025-01486-2},
+  modificationdate = {2025-07-14T06:34:49},
+  publisher        = {Springer Science and Business Media LLC},
+}
+
+@Article{LentBun2025,
+  author           = {van Lent, Paul AND Bunkova, Olga AND Magyar, Bálint AND Planken, Léon AND Schmitz, Joep AND Abeel, Thomas},
+  journal          = {PLOS Computational Biology},
+  title            = {Jaxkineticmodel: Neural ordinary differential equations inspired parameterization of kinetic models},
+  year             = {2025},
+  month            = {07},
+  number           = {7},
+  pages            = {1-17},
+  volume           = {21},
+  abstract         = {Motivation: Metabolic kinetic models are widely used to model biological systems. Despite their widespread use, it remains challenging to parameterize these Ordinary Differential Equations (ODE) for large scale kinetic models. Recent work on neural ODEs has shown the potential for modeling time-series data using neural networks, and many methodological developments in this field can similarly be applied to kinetic models. Results: We have implemented a simulation and training framework for Systems Biology Markup Language (SBML) models using JAX/Diffrax, which we named jaxkineticmodel. JAX allows for automatic differentiation and just-in-time compilation capabilities to speed up the parameterization of kinetic models, while also allowing for hybridizing kinetic models with neural networks. We show the robust capabilities of training kinetic models using this framework on a large collection of SBML models with different degrees of prior information on parameter initialization. We furthermore showcase the training framework implementation on a complex model of glycolysis. Finally, we show an example of hybridizing kinetic model with a neural network if a reaction mechanism is unknown. These results show that our framework can be used to fit large metabolic kinetic models efficiently and provides a strong platform for modeling biological systems. Implementation: Implementation of jaxkineticmodel is available as a Python package at https://github.com/AbeelLab/jaxkineticmodel.},
+  creationdate     = {2025-07-14T06:37:01},
+  doi              = {10.1371/journal.pcbi.1012733},
+  modificationdate = {2025-07-14T06:37:01},
+  publisher        = {Public Library of Science},
+  url              = {https://doi.org/10.1371/journal.pcbi.1012733},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
