--- a/doc/amici_refs.bib
+++ b/doc/amici_refs.bib
@@ -1606,6 +1606,37 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://doi.org/10.1371/journal.pcbi.1012733},
 }
 
+@Article{SundqvistPod2025,
+  author           = {Nicolas Sundqvist and Henrik Podéus and Sebastian Sten and Maria Engström and Salvador Dura-Bernal and Gunnar Cedersund},
+  journal          = {Computers in Biology and Medicine},
+  title            = {Model-driven meta-analysis establishes a new consensus view: Inhibitory neurons dominate {BOLD-fMRI} responses},
+  year             = {2025},
+  issn             = {0010-4825},
+  pages            = {111014},
+  volume           = {197},
+  abstract         = {Functional magnetic resonance imaging (fMRI) is a pivotal tool for mapping neuronal activity in the brain. Traditionally, the observed hemodynamic changes are assumed to reflect the activity of the most common neuronal type: excitatory neurons. In contrast, recent experiments, using optogenetic techniques, suggest that the fMRI-signal could reflect the activity of inhibitory interneurons. However, these data paint a complex picture, with numerous regulatory interactions, and with responses that sometimes seem to point in different directions. It is therefore not trivial how to quantify the relative contributions of the different cell types into a consensus view compatible with the considered data. To address this, we present a new model-driven meta-analysis, which provides a unified and quantitative explanation for the considered data. This model-driven analysis allows for quantification of the relative contribution of different cell types: the contribution to the BOLD-signal from the excitatory cells is <20 % and 50–80 % comes from the interneurons. Our analysis also provides a mechanistic explanation for the observed experiment-to-experiment differences. For instance, one of the reasons that data seem to point in different directions is a biphasic vascular response, with a transient increase and a subsequent decrease. Our model-based data analysis explains why this biphasic response appears only for high-intensity stimulations and not for low-intensity stimulations. In other words, our meta-analysis goes beyond a simple vote-by-majority and provides a single unified explanation for the considered data. This explanation provides a consensus view that constitutes a paradigm shift in how fMRI can, and cannot, be used to interpret neuronal activity.},
+  creationdate     = {2025-09-23T19:50:09},
+  doi              = {https://doi.org/10.1016/j.compbiomed.2025.111014},
+  keywords         = {fMRI, BOLD, OIS, NVC, Mathematical modelling, Inhibitory neurons},
+  modificationdate = {2025-09-23T19:50:26},
+  url              = {https://www.sciencedirect.com/science/article/pii/S0010482525013666},
+}
+
+@Article{PhilippsSch2025,
+  author           = {Philipps, Maren and Schmid, Nina and Hasenauer, Jan},
+  journal          = {npj Systems Biology and Applications},
+  title            = {Current state and open problems in universal differential equations for systems biology},
+  year             = {2025},
+  issn             = {2056-7189},
+  month            = aug,
+  number           = {1},
+  volume           = {11},
+  creationdate     = {2025-09-23T19:51:56},
+  doi              = {10.1038/s41540-025-00550-w},
+  modificationdate = {2025-09-23T19:51:56},
+  publisher        = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
